--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,9 +2,17 @@ packages:
   - packages/*
 catalog:
   '@antfu/eslint-config': ^5.2.1
+  '@types/markdown-it': ^14.1.2
   '@types/node': ^22.17.2
   bumpp: ^10.2.3
   eslint: ^9.34.0
   tsdown: ^0.14.1
   typescript: ^5.9.2
   vitest: ^3.2.4
+catalogs:
+  integrations:
+    entities: ^6.0.1
+    mdurl: ^2.0.0
+    uc.micro: ^2.1.0
+  types:
+    '@types/mdurl': ^2.0.0
