--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,8 +2,6 @@ packages:
   - packages/*
 catalog:
   '@antfu/eslint-config': ^5.2.1
-  '@types/markdown-it': ^14.1.2
-  '@types/node': ^22.17.2
   bumpp: ^10.2.3
   eslint: ^9.34.0
   tsdown: ^0.14.1
@@ -12,7 +10,12 @@ catalog:
 catalogs:
   integrations:
     entities: ^6.0.1
+    linkify-it: ^5.0.0
     mdurl: ^2.0.0
+    punycode.js: ^2.3.1
     uc.micro: ^2.1.0
   types:
+    '@types/linkify-it': ^5.0.0
+    '@types/markdown-it': ^14.1.2
     '@types/mdurl': ^2.0.0
+    '@types/node': ^22.17.2
