test: fork and rewrite fixtures tests

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "eslint": "catalog:",
     "tsdown": "catalog:",
     "typescript": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:tests"
   }
 }
