--- a/packages/testgen/package.json
+++ b/packages/testgen/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@markdown-fit/testgen",
   "type": "module",
+  "version": "0.0.0",
   "private": true,
   "license": "MIT",
   "main": "./src/index.ts",
