--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "pnpm -r run build",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "pnpm lint && pnpm test && pnpm build && bumpp -r",
-    "release": "pnpm -r publish",
+    "release": "pnpm lint && pnpm test --run && bumpp -r && pnpm -r publish",
     "lint": "eslint ."
   },
   "devDependencies": {
