--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@markdown-fit/monorepo",
+  "name": "@markdown-exit/monorepo",
   "type": "module",
   "version": "0.0.0",
   "private": true,
