--- a/packages/testgen/package.json
+++ b/packages/testgen/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@markdown-fit/testgen",
+  "name": "@markdown-exit/testgen",
   "type": "module",
   "version": "0.0.0",
   "private": true,
