--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,6 +15,7 @@ catalogs:
     uc.micro: ^2.1.0
   tests:
     js-yaml: ^4.1.0
+    shiki: ^3.12.1
     tinyglobby: ^0.2.14
     vitest: ^3.2.4
   types:
