test: load fixtures with `import.meta.glob` for watching fixture files

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "shiki": "catalog:tests",
     "tsdown": "catalog:",
     "typescript": "catalog:",
+    "vite": "catalog:",
     "vitest": "catalog:tests"
   }
 }
