test: async load fixtures with `import.meta.glob` for watching fixture files
cherry-pick from:
a1de60fb817d67f626b1a76a350aabdf3d2aabe8
861e0f1c784088f585bdcaa17030d27ae744e57f

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "catalog:",
     "tsdown": "catalog:",
     "typescript": "catalog:",
+    "vite": "catalog:",
     "vitest": "catalog:tests"
   }
 }
