--- a/packages/testgen/package.json
+++ b/packages/testgen/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@markdown-exit/testgen",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "private": true,
   "license": "MIT",
   "main": "./src/index.ts",
