--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,5 @@
 packages:
+  - docs
   - packages/*
 catalog:
   '@antfu/eslint-config': ^6.2.0
@@ -14,6 +15,13 @@ catalogs:
     commonmark: ^0.31.2
     markdown-it: ^14.1.0
     marked: ^16.4.1
+  docs:
+    typedoc: ^0.28.14
+    typedoc-plugin-frontmatter: ^1.3.0
+    typedoc-plugin-markdown: ^4.9.0
+    typedoc-vitepress-theme: ^1.1.2
+    vitepress: 2.0.0-alpha.12
+    vue: ^3.5.22
   integrations:
     entities: ^7.0.0
     linkify-it: ^5.0.0
