--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
   - docs
   - packages/*
+
 catalog:
   '@antfu/eslint-config': ^6.2.0
   bumpp: ^10.3.1
@@ -8,6 +9,7 @@ catalog:
   tsdown: ^0.15.12
   typescript: ^5.9.3
   vite: ^7.1.12
+
 catalogs:
   bench:
     '@types/commonmark': ^0.27.10
@@ -38,3 +40,6 @@ catalogs:
     '@types/linkify-it': ^5.0.0
     '@types/mdurl': ^2.0.0
     '@types/node': ^24.10.0
+
+onlyBuiltDependencies:
+  - esbuild
